--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+Distance version 0.8.0
+ * new simplified table data format (see ?ds)
+ * bug in binning from cutpoints (thanks to Colin Beale for finding this)
+ * removed percentage truncation for binned data, as it doesn't really make sense
+
+Distance version 0.7.4
+ * new initial values argument
+
 Distance version 0.7.3
  * remove annoying crash when mrds failed to fit a model
  * NB the optimiser underlying mrds (optimx) has changed, update both of these
