--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,17 @@
+Distance version 0.9
+ * Flat file support example, see ?flatfile
+ * New data set: simulated minke whale data, see ?minke and ?flatfile for an example analysis
+ * Models with both covariates and adjustment terms can be specified.
+ * Default left truncation is now 0, default right truncation is now the largest observed distance or furthest bin end.
+
+Distance version 0.8.1
+ * another fix to binning (redundant code/inconsistent definition between docs and code). (Thanks to Jason Roberts for finding this.)
+ * binning would fail if there were NA distances, which might occur when using the simplified data tables
+ * check implemented to ensure that samples have consistent (i.e. the same) effort (Eric Rexstad found this bug)
+ * clarification that stratification only occurs at the abundance/density estimation stage (dht), rather than at the detection function modelling stage (thanks to Filipe Dias for this suggestion)
+ * Setting order=0 is equivalent to adjustment=NULL to specify a detection function without adjustments. (Eric Rexstad brought this to my attention.)
+
+
 Distance version 0.8.0
  * new simplified table data format (see ?ds)
  * bug in binning from cutpoints (thanks to Colin Beale for finding this)
